調整程式架構